--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "framer-motion": "^12.5.0",
     "mongodb": "^6.13.0",
     "next": "14.2.24",
     "react": "^18",
