--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^15.3.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "framer-motion": "^12.5.0",
@@ -21,6 +22,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18",
     "react-hover-image": "^2.0.1",
+    "react-icons": "^5.5.0",
     "react-image-magnify": "^2.7.4",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.3",
